fixing small error in overflow of cards

--- a/front-end/src/leaderboard.css
+++ b/front-end/src/leaderboard.css
@@ -25,7 +25,7 @@
 }
 .card_container {
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .leader {
